<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<LinearLayout
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="in.sportscult.sportscultapp.RegistrationActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"/>
    <EditText
        android:id="@+id/reg_team_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/team_name"/>
    <EditText
        android:id="@+id/reg_coach_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coach_name"/>
    <EditText
        android:id="@+id/reg_coach_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coach_contact"/>
    <EditText
        android:id="@+id/reg_coach_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/coach_email"/>
    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"/>
    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_more_players"
        android:id="@+id/textView2" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        app:srcCompat="@drawable/ic_control_point_black_24dp"
        android:id="@+id/new_player"
        android:onClick="add_new_player"
        />
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="register_team"/>
</LinearLayout>
    </ScrollView>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/player_list"/>
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
</LinearLayout>