<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    android:layout_width="match_parent">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:background="@color/viewBg"
    android:layout_height="match_parent">
<ImageView
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/sportscult"/>
    <TextView
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_height"
        android:textColor="@color/primaryText"
        android:text="@string/history"/>
    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-thin"
        android:layout_height="wrap_content"
        android:text="@string/content_history"
        android:textColor="@color/secondaryText"
        />
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_height"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/primaryText"
        android:text="@string/philosophy"/>
    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-thin"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryText"
        android:text="@string/content_philosophy"/>
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="@dimen/title_height"
        android:textColor="@color/primaryText"
        android:text="@string/commitment"/>
    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/secondaryText"
        android:text="@string/content_commitment"/>

</LinearLayout>
</ScrollView>