<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginBottom="5dip">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                android:id="@+id/team"
                layout="@layout/team_identity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_played"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_won"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_lost"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_draw"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_goals"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/matches_goals_concieved"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/red_cards"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/points"
                    android:textColor="@color/secondaryText"
                    android:textSize="@dimen/title"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="20"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/matches_played"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="15"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/matches_won"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="3"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/matches_lost"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="2"
                android:gravity="center"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/matches_drawn"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="80"
                android:gravity="center"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/goals_scored"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="40"
                android:gravity="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/goals_conceived"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="8"
                android:gravity="center"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/red_cards_received"
                android:paddingRight="10dip"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="40"
                android:gravity="center"
                android:textColor="@color/primaryText"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:id="@+id/points_awarded" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>