<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/textView"
        android:gravity="center"
        android:textColor="@color/colorPrimaryLight"
        android:text="Rules &amp; Regulations"/>



    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/md_keylines"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/textView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="48dp"
        android:gravity="left"
        android:id="@+id/dot"
        android:layout_margin="@dimen/md_keylines"
        android:layout_below="@id/line"
        android:layout_height="48dp"
        android:src="@drawable/goal"/>

    <com.uncopt.android.widget.text.justify.JustifiedTextView
        android:layout_margin="@dimen/md_keylines"
        android:id="@+id/rule1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rule1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:gravity="left"
            android:id="@+id/dot1"
            android:layout_margin="@dimen/md_keylines"
            android:layout_below="@id/line"
            android:layout_height="48dp"
            android:src="@drawable/foul"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:layout_margin="@dimen/md_keylines"
            android:id="@+id/rule2"
            android:layout_below="@id/dot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:gravity="left"
            android:layout_margin="@dimen/md_keylines"
            android:layout_below="@id/line"
            android:layout_height="48dp"
            android:src="@drawable/penalty_kik"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:layout_margin="@dimen/md_keylines"
            android:layout_below="@id/dot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule3"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:gravity="left"
            android:layout_margin="@dimen/md_keylines"
            android:layout_below="@id/line"
            android:layout_height="48dp"
            android:src="@drawable/red_card"/>

        <com.uncopt.android.widget.text.justify.JustifiedTextView
            android:layout_margin="@dimen/md_keylines"
            android:layout_below="@id/dot1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule4"/>

    </LinearLayout>

</LinearLayout>